webhooks and stripe components

--- a/ecommerce/src/App.scss
+++ b/ecommerce/src/App.scss
@@ -144,3 +144,14 @@ form {
   color: red;
   font-size: 1.5rem;
 }
+
+// 
+.error {
+    border: 1px solid red;
+}
+
+// Div that displays error message
+.error-message {
+    color: red;
+    font-size: 1.5rem;
+}
