--- a/ecommerce/src/components/header/Header.styles.scss
+++ b/ecommerce/src/components/header/Header.styles.scss
@@ -21,6 +21,8 @@
         li {
             display: inline-block;
             margin: 0 1rem;
+            // 
+            cursor: pointer;
         }
     }
 }
